<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

	    <TextView
	        android:id="@+id/tvConfigConexao"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:text="@string/spTurma" />
	
	    <Spinner
	        android:id="@+id/spinnerEscola"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:prompt="@string/selectEscola" />
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:text="@string/tvEscolherAluno" />
	
	    <Spinner
	        android:id="@+id/spinnerAluno"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center" />
	
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center" >
	
	        <Button
	            android:id="@+id/btAvancar"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/btAvancar" />
	
	        <Button
	            android:id="@+id/btNaoListado"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/btNaoListado" />
	
	    </LinearLayout>
	
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center" >
	
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	
	            <TextView
	                android:id="@+id/tvOutrasAcoes"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:text="@string/tvOutrasAcoes"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	
	            <Button
	                android:id="@+id/btSincronizar1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:text="@string/btSincronizar1" />
	
	        </LinearLayout>
	
	    </RelativeLayout>
    
    </LinearLayout>

</ScrollView>