<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/usuario" />

        <EditText
            android:id="@+id/etNomeUsuario"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:singleLine="true" >

            <requestFocus />

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/senha" />

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPassword" >
        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btEntrarOnline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrarOnLine" />

            <Button
                android:id="@+id/btEntrarOffline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrarOffLine" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvConfigConexao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/configConexao"
            android:layout_weight="1"
            android:text="@string/tvConfigConexao" />

    </LinearLayout>

</RelativeLayout>